<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_item_home"
        android:title="@string/nav_bottom_item_home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/bottom_nav_item_know"
        android:title="@string/nav_bottom_item_knowledge_system"
        android:icon="@drawable/ic_knowledge_system"/>
    <item
        android:id="@+id/bottom_nav_item_nav"
        android:title="@string/nav_bottom_item_navigation"
        android:icon="@drawable/ic_navigation"/>
    <item
        android:id="@+id/bottom_nav_item_public_num"
        android:title="@string/nav_bottom_item_public_num"
        android:icon="@drawable/ic_public_num"/>
    <item
        android:id="@+id/bottom_nav_item_project"
        android:title="@string/nav_bottom_item_project"
        android:icon="@drawable/ic_project"/>
</menu>